Added NGWEATHER, lowered lazy load threshold

--- a/src/index.html
+++ b/src/index.html
@@ -111,8 +111,8 @@
         <div class="tile is-8">
           <div class="tile is-parent">
             <article class="tile is-child box is-info">
-              <p class="title">2 &nbsp;<i class="fa fa-university" aria-hidden="true"></i></p>
-              <p class="subtitle">In high school I ran multiple affiliate marketing websites, one of which made anywhere from $2-$3k per month.  This is when I learned HTML, CSS, and a little bit of JavaScript and PHP.  Ultimately, I decided to pursue a degree in health care, but I always had the tech field as my fall-back plan.  In 2015, I graduated from the University of Nevada, Reno with a Bachelors of Science in Community Health Sciences.</p>
+              <p class="title">2 &nbsp;<i class="fa fa-graduation-cap" aria-hidden="true"></i></p>
+              <p class="subtitle">In high school I ran multiple affiliate marketing websites, serving over 200,000 users per month.  This is when I learned HTML, CSS, and a little bit of JavaScript and PHP.  Ultimately, I decided to pursue a degree in health care, but I always had the tech field in my sights.  In 2015, I graduated from the University of Nevada, Reno with a Bachelors of Science in Community Health Sciences.</p>
             </article>
           </div>
         </div>
@@ -122,7 +122,7 @@
         <div class="tile is-8">
           <div class="tile is-parent">
             <article class="tile is-child box is-primary">
-              <p class="title">3 &nbsp;<i class="fa fa-heartbeat" aria-hidden="true"></i></p>
+              <p class="title">3 &nbsp;<i class="fa fa-medkit" aria-hidden="true"></i></p>
               <p class="subtitle">At the end of my junior year I realized that the health field wasn’t where I wanted to end up, but instead of switching majors I decided to finish my degree and explore career options later.  Since I had a health sciences degree, I thought about a career as an epidemiologist so I began to learn about data analysis using python (pandas). After some some data analysis and web scraping projects, I made the choice to move away from health and commit all my time to web development.</p>
               <div class="content">
                 <!-- Content -->
@@ -156,23 +156,52 @@
       <div class="columns">
         <!-- Row: 1  Col: 1 -->
         <div class="column is-4">
+            <article class="project notification is-info">
+              <h3 class="title is-size-4-touch">NGWEATHER</h3>
+              <p class="subtitle is-size-5-touch">Angular 6, Typescript, D3</p>
+              <a href="https://ngweather.tk/" rel="noopener" target="_blank">
+                <picture class="image is-4by3 box img-shadow">
+                  <img class="lozad" data-src="./img/project-ngw.png" src="./img/project-ngw-60x60.png">
+                </picture>
+              </a>
+              <div class="content">
+                <div class="button-wrap">
+                  <a class="button button--start is-light button-shadow" href="https://ngweather.tk"  rel="noopener" target="_blank">
+                    <span class="icon">
+                      <i class="fa fa-link"></i>
+                    </span>
+                    <span class="is-size-7-touch">Live</span>
+                  </a>
+                  <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/ngweather" rel="noopener" target="_blank">
+                    <span class="icon">
+                      <i class="fa fa-github"></i>
+                    </span>
+                    <span class="is-size-7-touch">Github</span>
+                  </a>
+                </div>
+                <p class="project-text box">I struggled with handling the API requests asynchronously, but managed to solve the problem using BehaviorSubject and Observables from rxjs.</p>
+              </div>
+            </article>
+          </div>
+        <!-- Row: 1  Col: 2 -->
+        <div class="column is-4">
           <article class="project notification bg-primary is-primary">
             <h3 class="title is-size-4-touch">SFTHCC</h3>
             <p class="subtitle is-size-5-touch">Responsive, Custom Wordpress</p>
-            <a href="https://sfthcc.org" target="_blank">
+            <a href="https://sfthcc.org" rel="noopener" target="_blank">
               <picture class="image is-4by3 box img-shadow">
                 <img class="lozad" data-src="./img/project-sfthcc.png" src="./img/project-sfthcc-60x60.png">
               </picture>
             </a>
             <div class="content">
               <div class="button-wrap">
-                <a class="button button--start is-light button-shadow" href="https://sfthcc.org" target="_blank">
+                <a class="button button--start is-light button-shadow" href="https://sfthcc.org" rel="noopener" target="_blank">
                   <span class="icon">
                     <i class="fa fa-link"></i>
                   </span>
                   <span class="is-size-7-touch">Live</span>
                 </a>
-                <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/portfolio" target="_blank">
+                <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/portfolio" rel="noopener" target="_blank">
                   <span class="icon">
                     <i class="fa fa-github"></i>
                   </span>
@@ -183,61 +212,32 @@
             </div>
           </article>
         </div>
-        <!-- Row: 1  Col: 2 -->
+        <!-- Row: 1  Col: 3 -->
         <div class="column is-4">
           <article class="project notification is-info">
             <h3 class="title is-size-4-touch">Calaska Culture</h3>
             <p class="subtitle is-size-5-touch">Semantic, Responsive</p>
-            <a href="https://www.calaska.org/?utm_source=portfolio&utm_medium=img" target="_blank">
+            <a href="https://www.calaska.org/" rel="noopener" target="_blank">
               <picture class="image is-4by3 box img-shadow">
                 <img class="lozad" data-src="./img/project-cc.png" src="./img/project-cc-60x60.png">
               </picture>
             </a>
             <div class="content">
               <div class="button-wrap">
-                <a class="button button--start is-light button-shadow" href="https://www.calaska.org/?utm_source=portfolio&utm_medium=button" target="_blank">
+                <a class="button button--start is-light button-shadow" href="https://www.calaska.org/" rel="noopener" target="_blank">
                   <span class="icon">
                     <i class="fa fa-link"></i>
                   </span>
                   <span class="is-size-7-touch">Live</span>
                 </a>
-                <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/ak-native-culture" target="_blank">
+                <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/ak-native-culture" rel="noopener" target="_blank">
                   <span class="icon">
                     <i class="fa fa-github"></i>
                   </span>
                   <span class="is-size-7-touch">Github</span>
                 </a>
               </div>
-              <p class="project-text box">Website for a non-profit. Uses a lightweight css framework called Taffy. Custom JS for <a href="https://www.calaska.org/?utm_source=portfolio&utm_medium=project-text#activities">tabs</a> and <a href="https://www.calaska.org/events/moccasin-class-fort-ross-2017.html?utm_source=portfolio&utm_medium=project-text">image gallery</a> implementation through a jquery plugin. MailChimp api integration.</p>
-            </div>
-          </article>
-        </div>
-        <!-- Row: 1  Col: 3 -->
-        <div class="column is-4">
-          <article class="project bg-primary notification is-primary">
-            <h3 class="title is-size-4-touch">10 Day Weather</h3>
-            <p class="subtitle is-size-5-touch">Api's, Bootstrap</p>
-            <a href="https://doanvin.github.io/weather-by-burr" target="_blank">
-            <picture class="image is-4by3 box img-shadow">
-              <img class="lozad" data-src="./img/project-10dw.png" src="./img/project-10dw-60x60.png">
-            </picture>
-            </a>
-            <div class="content">
-              <div class="button-wrap">
-                <a class="button button--start is-light button-shadow" href="https://doanvin.github.io/weather-by-burr" target="_blank">
-                  <span class="icon">
-                    <i class="fa fa-link"></i>
-                  </span>
-                  <span class="is-size-7-touch">Live</span>
-                </a>
-                <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/weather-by-burr" target="_blank">
-                  <span class="icon">
-                    <i class="fa fa-github"></i>
-                  </span>
-                  <span class="is-size-7-touch">Github</span>
-                </a>
-              </div>
-              <p class="project-text box">10 Day Weather attempts to get visitor's ip address from freegeoip.net and make an api call to yahoo weather. If it cannot get user's ip, it defaults to Reno, NV. Quick Bootstrap 3 prototype for Vanilla JS experience.</p>
+              <p class="project-text box">Website for a non-profit. Uses a lightweight css framework called Taffy. Custom JS for <a rel="noopener"href="https://www.calaska.org/?utm_source=portfolio&utm_medium=project-text#activities">tabs</a> and <a href="https://www.calaska.org/events/moccasin-class-fort-ross-2017.html?utm_source=portfolio&utm_medium=project-text">image gallery</a> implementation through a jquery plugin. MailChimp api integration.</p>
             </div>
           </article>
         </div>
@@ -246,23 +246,52 @@
       <div class="columns">
         <!-- Row: 2  Col: 1 -->
         <div class="column is-4">
+            <article class="project bg-primary notification is-primary">
+              <h3 class="title is-size-4-touch">10 Day Weather</h3>
+              <p class="subtitle is-size-5-touch">Api's, Bootstrap</p>
+              <a href="https://doanvin.github.io/weather-by-burr" rel="noopener" target="_blank">
+              <picture class="image is-4by3 box img-shadow">
+                <img class="lozad" data-src="./img/project-10dw.png" src="./img/project-10dw-60x60.png">
+              </picture>
+              </a>
+              <div class="content">
+                <div class="button-wrap">
+                  <a class="button button--start is-light button-shadow" href="https://doanvin.github.io/weather-by-burr" rel="noopener" target="_blank">
+                    <span class="icon">
+                      <i class="fa fa-link"></i>
+                    </span>
+                    <span class="is-size-7-touch">Live</span>
+                  </a>
+                  <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/weather-by-burr" rel="noopener" target="_blank">
+                    <span class="icon">
+                      <i class="fa fa-github"></i>
+                    </span>
+                    <span class="is-size-7-touch">Github</span>
+                  </a>
+                </div>
+                <p class="project-text box">10 Day Weather attempts to get visitor's ip address from freegeoip.net and make an api call to yahoo weather. If it cannot get user's ip, it defaults to Reno, NV. Quick Bootstrap 3 prototype for Vanilla JS experience.</p>
+              </div>
+            </article>
+          </div>
+        <!-- Row: 2  Col: 2 -->
+        <div class="column is-4">
           <article class="project notification is-info">
             <h3 class="title is-size-4-touch">Angular Todo</h3>
             <p class="subtitle is-size-5-touch">Angular 5</p>
-            <a href="https://doanvin.github.io/angular-todo/" target="_blank">
+            <a href="https://doanvin.github.io/angular-todo/" rel="noopener" target="_blank">
               <picture class="image is-4by3 box img-shadow">
                 <img class="lozad" data-src="./img/project-at.png" src="./img/project-at-60x60.png">
               </picture>
             </a>
             <div class="content">
               <div class="button-wrap">
-                  <a class="button button--start is-light button-shadow" href="https://doanvin.github.io/angular-todo/" target="_blank">
+                  <a class="button button--start is-light button-shadow" href="https://doanvin.github.io/angular-todo/" rel="noopener" target="_blank">
                     <span class="icon">
                       <i class="fa fa-link"></i>
                     </span>
                     <span class="is-size-7-touch">Live</span>
                   </a>
-                  <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/angular-todo" target="_blank">
+                  <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/angular-todo" rel="noopener" target="_blank">
                     <span class="icon">
                       <i class="fa fa-github"></i>
                     </span>
@@ -273,7 +302,7 @@
             </div>
           </article>
         </div>
-        <!-- Row: 2  Col: 2 -->
+        <!-- Row: 2  Col: 3 -->
         <div class="column is-4">
           <article class="project notification bg-primary is-primary">
             <h3 class="title is-size-4-touch">Portfolio</h3>
@@ -291,7 +320,7 @@
                   </span>
                   <span class="is-size-7-touch">Live</span>
                 </a>
-                <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/portfolio" target="_blank">
+                <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/portfolio" rel="noopener" target="_blank">
                   <span class="icon">
                     <i class="fa fa-github"></i>
                   </span>
@@ -365,7 +394,7 @@
           &copy; Copyright 2018 | Donavin Hannon
         </p>
         <p>
-          <a class="icon" href="https://github.com/Doanvin">
+          <a class="icon" href="https://github.com/Doanvin" rel="noopener" >
             <i class="fa fa-github"></i>
           </a>
         </p>
@@ -380,7 +409,9 @@
   <script>
   var scroll = new SmoothScroll('a[href*="#"]');
   var el = document.querySelectorAll('picture img.lozad');
-  var observer = lozad(el); // lazy loads elements with default selector as '.lozad'
+  var observer = lozad(el,  {
+    threshold: 0.0 // ratio of element convergence
+  }); // lazy loads elements with default selector as '.lozad'
   observer.observe();
   </script>
 
