--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
   <title>Portfolio | DH</title>
   <link rel="stylesheet" href="./css/main.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"
+  integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw"
+  crossorigin="anonymous">
 </head>
 
 <body>
@@ -64,16 +68,18 @@
     <!-- Hero content: will be in the middle -->
     <div class="hero-body">
       <div class="container has-text-centered">
-        <picture>
-          <source media="(max-width: 359px)" srcset="./img/dev-icon-inverted-175x175.svg" type="image/svg+xml"/>
-          <source media="(min-width: 360px)" srcset="./img/dev-icon-inverted-275x275.svg" type="image/svg+xml"/>
-          <img srcset="./img/dev-icon-inverted-175x175.png" alt="Developer in front of computer"/>
-        </picture>
+        <div class="pic-contain animated rollIn">
+          <picture>
+            <source media="(max-width: 359px)" srcset="./img/dev-icon-inverted-175x175.svg" type="image/svg+xml"/>
+            <source media="(min-width: 360px)" srcset="./img/dev-icon-inverted-275x275.svg" type="image/svg+xml"/>
+            <img srcset="./img/dev-icon-inverted-175x175.png" alt="Developer in front of computer"/>
+          </picture>
+        </div>
 
-        <h1 class="title is-size-3-mobile is-size-2-tablet is-size-1-desktop">
+        <h1 class="title is-size-3-mobile is-size-2-tablet is-size-1-desktop animated rollIn">
           Donavin Hannon
         </h1>
-        <p class="subtitle is-size-3-mobile is-size-2-tablet is-size-1-desktop">
+        <p class="subtitle is-size-3-mobile is-size-2-tablet is-size-1-desktop animated rollIn">
           Front End Web Developer
         </p>
       </div>
@@ -161,7 +167,7 @@
               <p class="subtitle is-size-5-touch">Angular 6, Typescript, D3</p>
               <a href="https://ngweather.tk/" rel="noopener" target="_blank">
                 <picture class="image is-4by3 box img-shadow">
-                  <img class="lozad" data-src="./img/project-ngw.png" src="./img/project-ngw-60x60.png">
+                  <img class="lozad animated fadeIn" data-src="./img/project-ngw.png" src="./img/project-ngw-60x60.png">
                 </picture>
               </a>
               <div class="content">
@@ -190,7 +196,7 @@
             <p class="subtitle is-size-5-touch">Responsive, Custom Wordpress</p>
             <a href="https://sfthcc.org" rel="noopener" target="_blank">
               <picture class="image is-4by3 box img-shadow">
-                <img class="lozad" data-src="./img/project-sfthcc.png" src="./img/project-sfthcc-60x60.png">
+                <img class="lozad animated fadeIn" data-src="./img/project-sfthcc.png" src="./img/project-sfthcc-60x60.png">
               </picture>
             </a>
             <div class="content">
@@ -219,7 +225,7 @@
             <p class="subtitle is-size-5-touch">Semantic, Responsive</p>
             <a href="https://www.calaska.org/" rel="noopener" target="_blank">
               <picture class="image is-4by3 box img-shadow">
-                <img class="lozad" data-src="./img/project-cc.png" src="./img/project-cc-60x60.png">
+                <img class="lozad animated fadeIn" data-src="./img/project-cc.png" src="./img/project-cc-60x60.png">
               </picture>
             </a>
             <div class="content">
@@ -251,7 +257,7 @@
               <p class="subtitle is-size-5-touch">Api's, Bootstrap</p>
               <a href="https://doanvin.github.io/weather-by-burr" rel="noopener" target="_blank">
               <picture class="image is-4by3 box img-shadow">
-                <img class="lozad" data-src="./img/project-10dw.png" src="./img/project-10dw-60x60.png">
+                <img class="lozad animated fadeIn" data-src="./img/project-10dw.png" src="./img/project-10dw-60x60.png">
               </picture>
               </a>
               <div class="content">
@@ -280,7 +286,7 @@
             <p class="subtitle is-size-5-touch">Angular 5</p>
             <a href="https://doanvin.github.io/angular-todo/" rel="noopener" target="_blank">
               <picture class="image is-4by3 box img-shadow">
-                <img class="lozad" data-src="./img/project-at.png" src="./img/project-at-60x60.png">
+                <img class="lozad animated fadeIn" data-src="./img/project-at.png" src="./img/project-at-60x60.png">
               </picture>
             </a>
             <div class="content">
@@ -309,7 +315,7 @@
             <p class="subtitle is-size-5-touch">Semantic, Responsive</p>
             <a title="You're already here!" disabled>
               <picture class="image is-4by3 box img-shadow">
-                <img class="lozad" data-src="./img/project-port.png" src="./img/project-port-60x60.png">
+                <img class="lozad animated fadeIn" data-src="./img/project-port.png" src="./img/project-port-60x60.png">
               </picture>
             </a>
             <div class="content">
