Updated sfthcc github link title

--- a/src/index.html
+++ b/src/index.html
@@ -207,7 +207,7 @@
                   </span>
                   <span class="is-size-7-touch">Live</span>
                 </a>
-                <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/portfolio" rel="noopener" target="_blank">
+                <a class="button button--end is-dark button-shadow" rel="noopener" target="_blank" title="Privately hosted on BitBucket." disabled>
                   <span class="icon">
                     <i class="fa fa-github"></i>
                   </span>
